--- a/public/CSS/estilos.css
+++ b/public/CSS/estilos.css
@@ -174,18 +174,32 @@ h4 {
     }
 }
 @media (min-width: 768px) {
+    .table-registro{
+display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+}
+@media (min-width: 768px) {
     .table{
-
+text-align: center;
         width: 100%;
 
+    }
+    tr{
+        text-align: center;
     }
     th{
        background-color: #00b347;
     }
     td{
         border-bottom: 1px solid #000000;
+        text-align: center;
         width: 0%;
-        text-align: left;
+
+    }
+    input{
+        text-align: center;
     }
     .sin-borde{
         border: 0;
